--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/welcome-page.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/welcome-page.fxml
@@ -4,95 +4,105 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.WelcomePageController">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #F3F4F6;"
+   xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+   fx:controller="com.example.minimoodle.WelcomePageController">
    <children>
-      <VBox alignment="CENTER" layoutX="100.0" layoutY="50.0" spacing="15.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
+      <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" spacing="20.0"
+         AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+         AnchorPane.topAnchor="0.0">
          <children>
-            <!-- Main Title with Flashy Effects -->
-            <Label text="Welcome to Mini Moodle!" textAlignment="CENTER">
-               <font>
-                  <Font name="Trebuchet MS" size="30.0" />
-               </font>
-               <effect>
-                  <DropShadow color="#4B9CD3" offsetX="2.0" offsetY="2.0" radius="7.5" spread="0.6" />
-               </effect>
-               <style>
-                  -fx-text-fill: linear-gradient(to right, #FF416C, #FF4B2B);
-               </style>
-            </Label>
-            
-            <!-- Subheading -->
-            <Label text="Select Your Role..." textAlignment="CENTER">
-               <font>
-                  <Font name="JetBrains Mono" size="20.0" />
-               </font>
-               <style>
-                  -fx-text-fill: #5C5C5C;
-               </style>
-            </Label>
-            
+            <AnchorPane prefHeight="150.0" prefWidth="800.0"
+               style="-fx-background-color: #0B3E6B; -fx-border-radius: 20;">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="150.0" prefWidth="800.0"
+                     AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                     AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <!-- Main Title -->
+                        <Label alignment="CENTER" prefHeight="47.0" prefWidth="386.0"
+                           text="Mini Moodle" textFill="#1d2526">
+                           <font>
+                              <Font name="System Bold" size="32.0" />
+                           </font>
+                           <style>-fx-text-fill: #E8F3FD;</style>
+                        </Label>
+                        <Label alignment="CENTER" layoutX="217.0" layoutY="62.0" prefHeight="47.0"
+                           prefWidth="386.0" style="-fx-text-fill: #E8F3FD;"
+                           text="Connect to the Server first by entering the IP address"
+                           textFill="#1d2526">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
+
             <!-- Admin Radio Button -->
-            <RadioButton fx:id="welcomePageAdminRadioButton" mnemonicParsing="false" text="Admin">
-               <font>
-                  <Font name="Trebuchet MS" size="16.0" />
+            <RadioButton fx:id="welcomePageAdminRadioButton" mnemonicParsing="false"
+               prefHeight="30.0" prefWidth="110.0"
+               style="-fx-text-fill: #1F2A44; -fx-padding: 10 20 10 20; -fx-background-color: #FFFFFF; -fx-background-radius: 8; -fx-border-color: #D1D5DB; -fx-border-radius: 8;"
+               text="Admin" toggleGroup="$roleGroup">
+               <!-- <font>
+                  <Font name="System" size="14.0" />
                </font>
                <style>
-                  -fx-text-fill: #5C5C5C;
-                  -fx-background-color: #F8F8F8;
-                  -fx-border-radius: 5;
-                  -fx-border-color: #BDBDBD;
-                  -fx-padding: 10px;
-               </style>
+                  -fx-text-fill: #1F2A44;
+                  -fx-padding: 10 20 10 20;
+                  -fx-background-color: #FFFFFF;
+                  -fx-background-radius: 8;
+                  -fx-border-color: #D1D5DB;
+                  -fx-border-radius: 8;
+               </style> -->
                <toggleGroup>
                   <ToggleGroup fx:id="roleGroup" />
                </toggleGroup>
+               <font>
+                  <Font size="14.0" />
+               </font>
             </RadioButton>
-            
+
             <!-- Teacher Radio Button -->
-            <RadioButton fx:id="welcomePageTeacherRadioButton" mnemonicParsing="false" selected="true" text="Teacher" toggleGroup="$roleGroup">
+            <RadioButton fx:id="welcomePageTeacherRadioButton" mnemonicParsing="false"
+               prefHeight="30.0" prefWidth="110.0" selected="true"
+               style="-fx-text-fill: #1F2A44; -fx-padding: 10 20 10 20; -fx-background-color: #FFFFFF; -fx-background-radius: 8; -fx-border-color: #D1D5DB; -fx-border-radius: 8;"
+               text="Teacher" toggleGroup="$roleGroup">
                <font>
-                  <Font name="Trebuchet MS" size="16.0" />
+                  <Font size="14.0" />
                </font>
-               <style>
-                  -fx-text-fill: #5C5C5C;
-                  -fx-background-color: #F8F8F8;
-                  -fx-border-radius: 5;
-                  -fx-border-color: #BDBDBD;
-                  -fx-padding: 10px;
-               </style>
             </RadioButton>
-            
+
             <!-- Student Radio Button -->
-            <RadioButton fx:id="welcomePageStudentRadioButton" mnemonicParsing="false" text="Student" toggleGroup="$roleGroup">
+            <RadioButton fx:id="welcomePageStudentRadioButton" mnemonicParsing="false"
+               prefHeight="30.0" prefWidth="110.0"
+               style="-fx-text-fill: #1F2A44; -fx-padding: 10 20 10 20; -fx-background-color: #FFFFFF; -fx-background-radius: 8; -fx-border-color: #D1D5DB; -fx-border-radius: 8;"
+               text="Student" toggleGroup="$roleGroup">
                <font>
-                  <Font name="Trebuchet MS" size="16.0" />
+                  <Font size="14.0" />
                </font>
-               <style>
-                  -fx-text-fill: #5C5C5C;
-                  -fx-background-color: #F8F8F8;
-                  -fx-border-radius: 5;
-                  -fx-border-color: #BDBDBD;
-                  -fx-padding: 10px;
-               </style>
             </RadioButton>
-            
+
             <!-- Continue Button -->
-            <Button fx:id="welcomePageContinueButton" mnemonicParsing="false" onAction="#handleWelcomePageContinueButton" text="Continue to Login">
+            <Button fx:id="welcomePageContinueButton" alignment="CENTER" mnemonicParsing="false"
+               onAction="#handleWelcomePageContinueButton" prefHeight="40.0" prefWidth="160.0"
+               style="-fx-background-color: #062F61; -fx-cursor: hand; -fx-background-radius: 20;"
+               text="Continue to Login" textFill="#e1dbdb">
                <font>
-                  <Font name="Trebuchet MS" size="16.0" />
+                  <Font name="System Bold" size="13.0" />
                </font>
-               <style>
-                  -fx-background-color: linear-gradient(to right, #FF416C, #FF4B2B);
-                  -fx-text-fill: white;
-                  -fx-font-weight: bold;
-                  -fx-border-radius: 25;
-                  -fx-padding: 10px 20px;
-                  -fx-effect: dropshadow(gaussian, #333333, 10, 0.5, 0, 2);-fx-cursor: hand;</style>
+            </Button>
+            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="32.0" prefWidth="160.0"
+               style="-fx-background-color: #0F363D; -fx-text-fill: #EBD4A7; -fx-background-radius: 16;"
+               text="Connect to Server">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
             </Button>
          </children>
       </VBox>
