--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard.fxml
@@ -5,82 +5,134 @@
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<!-- <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.control.ImageView?> -->
-
-<AnchorPane prefHeight="580.0" prefWidth="640.0" style="-fx-background-color: linear-gradient(to bottom right, #1e3a8a, #3b82f6);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.TeacherDashboardController">
+<AnchorPane prefHeight="580.0" prefWidth="800.0" style="-fx-background-color: #F3F4F6;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.TeacherDashboardController">
    <children>
-      <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane style="-fx-background-color: #ffffff; -fx-background-radius: 15; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 10, 0, 0, 5);">
+            <!-- Top Ribbon -->
+            <AnchorPane prefHeight="80.0" style="-fx-background-color: #0B3E6B;">
                <children>
-                  <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+                  <!-- Mini Moodle Label on the left -->
+                  <Label fx:id="miniMoodleLabel" layoutX="20.0" layoutY="25.0" style="-fx-text-fill: #E8F3FD; -fx-font-weight: bold;" text="Mini Moodle" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="25.0">
+                     <font>
+                        <Font name="System Bold" size="32.0" />
+                     </font>
+                  </Label>
+                  
+                  <!-- Teacher name and logout on the right -->
+                  <HBox alignment="CENTER_RIGHT" layoutX="500.0" layoutY="20.0" spacing="15.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+                     <children>
+                        <Label fx:id="teacherNameRibbonLabel" style="-fx-text-fill: #E8F3FD; -fx-font-weight: bold;" text="Teacher Name">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="teacherDashboardLogoutButton" mnemonicParsing="false" onAction="#handleTeacherLogout" style="-fx-background-color: #ef4444; -fx-text-fill: white; -fx-background-radius: 8; -fx-padding: 8 15; -fx-font-size: 14; -fx-cursor: hand;" text="Logout">
+                           <font>
+                              <Font size="12.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
+
+            <!-- Main Content Area with two partitions -->
+            <HBox prefHeight="500.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <!-- Left Panel - Welcome and Course Info -->
+                  <VBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="298.0" spacing="20.0" style="-fx-background-color: linear-gradient(to bottom, #1e3a8a, #3b82f6); -fx-padding: 30;">
                      <children>
                         <!-- Welcome Label -->
-                        <Label fx:id="teacherIdLabel" style="-fx-text-fill: #1e3a8a; -fx-font-weight: bold;" text="Welcome, [Teacher]" textAlignment="CENTER">
+                        <Label fx:id="teacherIdLabel" style="-fx-text-fill: white; -fx-font-weight: bold;" text="Welcome, [Teacher]" textAlignment="CENTER">
                            <font>
-                              <Font name="System Bold" size="32.0" />
+                              <Font name="System Bold" size="28.0" />
                            </font>
                         </Label>
 
-                        <!-- Course Info -->
-                        <Label fx:id="courseNameLabel" style="-fx-text-fill: #4b5563; font-size: 18px; text-align:center;" text="Course Name: [Course Name]" textAlignment="CENTER">
+                        <!-- Course Info Section -->
+                        <VBox alignment="CENTER" spacing="15.0" style="-fx-background-color: rgba(255,255,255,0.1); -fx-background-radius: 15; -fx-padding: 20;">
+                           <children>
+                              <Label fx:id="courseNameLabel" style="-fx-text-fill: white; -fx-font-weight: bold;" text="Course Name: [Course Name]" textAlignment="CENTER">
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="courseIdLabel" style="-fx-text-fill: #E8F3FD;" text="Course ID: [Course ID]" textAlignment="CENTER">
+                                 <font>
+                                    <Font name="System" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="enrolledStudentsLabel" style="-fx-text-fill: #E8F3FD;" text="Enrolled Students: [Count]" textAlignment="CENTER">
+                                 <font>
+                                    <Font name="System" size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+
+                        <!-- Spacer to push Options button to bottom -->
+                        <VBox VBox.vgrow="ALWAYS" />
+
+                        <!-- Options Menu at bottom left -->
+                        <MenuButton fx:id="teacherSettingsButton" mnemonicParsing="false" style="-fx-background-color: #6b7280; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;" text="Options">
+                           <items>
+                              <MenuItem fx:id="teacherChangePasswordButton" mnemonicParsing="false" onAction="#handleTeacherPasswordChange" text="Change Password" />
+                           </items>
                            <font>
-                              <Font name="System" size="18.0" />
+                              <Font size="14.0" />
+                           </font>
+                        </MenuButton>
+                     </children>
+                  </VBox>
+
+                  <!-- Right Panel - Action Buttons -->
+                  <VBox alignment="CENTER" prefHeight="500.0" prefWidth="507.0" spacing="20.0" style="-fx-background-color: white; -fx-padding: 40;">
+                     <children>
+                        <Label style="-fx-text-fill: #1e3a8a; -fx-font-weight: bold;" text="Teacher Actions" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="22.0" />
                            </font>
                         </Label>
-                        <Label fx:id="courseIdLabel" style="-fx-text-fill: #4b5563; font-size: 18px;" text="Course ID: [Course ID]" textAlignment="CENTER">
-                           <font>
-                              <Font name="System" size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="enrolledStudentsLabel" style="-fx-text-fill: #4b5563; font-size: 18px;" text="Enrolled Students: [Count]" textAlignment="CENTER">
-                           <font>
-                              <Font name="System" size="18.0" />
-                           </font>
-                        </Label>
 
-                        <!-- Buttons Section -->
-                        <VBox alignment="CENTER" spacing="10.0">
-                           <Button fx:id="teacherDashboardApplicantsButton" mnemonicParsing="false" onAction="#handleTeacherSeeApplyingStudents" style="-fx-background-color: #3b82f6; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;" text="Applicants" />
+                        <!-- Action Buttons -->
+                        <VBox alignment="CENTER" spacing="15.0">
+                           <children>
+                              <Button fx:id="teacherDashboardApplicantsButton" mnemonicParsing="false" onAction="#handleTeacherSeeApplyingStudents" prefWidth="250.0" style="-fx-background-color: #3b82f6; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 15 25; -fx-font-size: 16; -fx-cursor: hand;" text="View Applicants">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Button>
 
-                           <Button fx:id="teacherDashboardEnrolledStudentsButton" mnemonicParsing="false" onAction="#handleTeacherViewEnrolledStudentsTable" style="-fx-background-color: #3b82f6; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;" text="Enrolled Students" />
+                              <Button fx:id="teacherDashboardEnrolledStudentsButton" mnemonicParsing="false" onAction="#handleTeacherViewEnrolledStudentsTable" prefWidth="250.0" style="-fx-background-color: #3b82f6; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 15 25; -fx-font-size: 16; -fx-cursor: hand;" text="Enrolled Students">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Button>
 
-                           <Button fx:id="teacherDashboardGradingButton" mnemonicParsing="false" onAction="#handleTeacherGrading" style="-fx-background-color: #3b82f6; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;" text="Grading" />
+                              <Button fx:id="teacherDashboardGradingButton" mnemonicParsing="false" onAction="#handleTeacherGrading" prefWidth="250.0" style="-fx-background-color: #3b82f6; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 15 25; -fx-font-size: 16; -fx-cursor: hand;" text="Student Grading">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Button>
 
-                           <!-- Refresh Button -->
-                           <Button fx:id="teacherDashboardRefreshButton" mnemonicParsing="false" onAction="#handleTeacherRefresh" style="-fx-background-color: #34d399; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;" text="Refresh" />
-
-                           <!-- Settings Menu -->
-                           <MenuButton fx:id="teacherSettingsButton" mnemonicParsing="false" style="-fx-background-color: #6b7280; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;" text="Settings">
-                              <items>
-                                 <MenuItem fx:id="teacherChangePasswordButton" mnemonicParsing="false" onAction="#handleTeacherPasswordChange" text="Change Password" />
-                              </items>
-                              <font>
-                                 <Font size="11.0" />
-                              </font>
-                           </MenuButton>
-
-                           <!-- Logout Button -->
-                           <Button fx:id="teacherDashboardLogoutButton" mnemonicParsing="false" onAction="#handleTeacherLogout" style="-fx-background-color: #ef4444; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 12 25; -fx-font-size: 16; -fx-cursor: hand;" text="Logout">
-                              <font>
-                                 <Font size="11.0" />
-                              </font>
-                           </Button>
+                              <!-- Refresh Button -->
+                              <Button fx:id="teacherDashboardRefreshButton" mnemonicParsing="false" onAction="#handleTeacherRefresh" prefWidth="250.0" style="-fx-background-color: #34d399; -fx-text-fill: white; -fx-background-radius: 10; -fx-padding: 15 25; -fx-font-size: 16; -fx-cursor: hand;" text="Refresh Dashboard">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Button>
+                           </children>
                         </VBox>
                      </children>
                   </VBox>
                </children>
-            </AnchorPane>
+            </HBox>
          </children>
       </VBox>
    </children>
-   <!-- <stylesheets>
-      @teacher-dashboard.css
-</stylesheets> -->
-
-
 </AnchorPane>
